@@ -1,24 +1,28 @@
 package com.example.warehousemanagement.service;
 
 import com.example.warehousemanagement.entity.Inventory;
-import com.example.warehousemanagement.entity.Product;
-import com.example.warehousemanagement.entity.Warehouse;
+import com.example.warehousemanagement.exception.ConcurrentInventoryException;
+import com.example.warehousemanagement.exception.NotFoundException;
 import com.example.warehousemanagement.repository.InventoryRepository;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 
-import java.sql.Timestamp;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
-public class InventoryServiceTest {
+@ExtendWith(MockitoExtension.class)
+class InventoryServiceTest {
 
     @Mock
     private InventoryRepository inventoryRepository;
@@ -26,72 +30,67 @@ public class InventoryServiceTest {
     @InjectMocks
     private InventoryService inventoryService;
 
-    private Inventory inventory;
+    @Test
+    void adjustInventoryQuantity_Success() {
+        // 准备测试数据
+        Long inventoryId = 1L;
+        when(inventoryRepository.adjustQuantity(inventoryId, 10, 0))
+                .thenReturn(1);
 
-    @BeforeEach
-    public void setUp() {
-        MockitoAnnotations.openMocks(this);
-        inventory = new Inventory();
-        inventory.setId(1L);
+        // 执行测试
+        inventoryService.adjustInventoryQuantity(inventoryId, 10, 0);
 
-        // 创建 Warehouse 和 Product 对象
-        Warehouse warehouse = new Warehouse();
-        warehouse.setId(1L); // 假设有一个 ID
-
-        Product product = new Product();
-        product.setId(1L); // 假设有一个 ID
-
-        inventory.setWarehouse(warehouse);
-        inventory.setProduct(product);
-        inventory.setQuantity(100);
-        inventory.setUpdatedAt(new Timestamp(System.currentTimeMillis())); // 设置更新时间
+        // 验证调用
+        verify(inventoryRepository).adjustQuantity(inventoryId, 10, 0);
     }
 
     @Test
-    public void testCreateInventory() {
-        when(inventoryRepository.save(any(Inventory.class))).thenReturn(inventory);
+    void adjustInventoryQuantity_ConcurrentFailure() {
+        Long inventoryId = 1L;
+        when(inventoryRepository.adjustQuantity(inventoryId, 10, 0))
+                .thenReturn(0);
 
-        Inventory createdInventory = inventoryService.createInventory(inventory);
-        assertNotNull(createdInventory);
-        assertEquals(1L, createdInventory.getId());
-        verify(inventoryRepository, times(1)).save(any(Inventory.class));
+        assertThatThrownBy(() -> inventoryService.adjustInventoryQuantity(inventoryId, 10, 0))
+                .isInstanceOf(ConcurrentInventoryException.class)
+                .hasMessageContaining("another transaction");
     }
 
     @Test
-    public void testGetInventoryById() {
-        when(inventoryRepository.findById(1L)).thenReturn(Optional.of(inventory));
+    void getInventory_NotFound() {
+        Long inventoryId = 999L;
+        when(inventoryRepository.findById(inventoryId)).thenReturn(Optional.empty());
 
-        Inventory foundInventory = inventoryService.getInventoryById(1L);
-        assertNotNull(foundInventory);
-        assertEquals(1L, foundInventory.getId());
-        verify(inventoryRepository, times(1)).findById(1L);
+        assertThatThrownBy(() -> inventoryService.getInventory(inventoryId))
+                .isInstanceOf(NotFoundException.class)
+                .hasMessageContaining("not found");
     }
 
     @Test
-    public void testGetAllInventories() {
-        List<Inventory> inventories = Arrays.asList(inventory, new Inventory());
-        when(inventoryRepository.findAll()).thenReturn(inventories);
-
-        List<Inventory> result = inventoryService.getAllInventories();
-        assertEquals(2, result.size());
-        verify(inventoryRepository, times(1)).findAll();
+    void bulkUpdateStatus_Success() {
+        List<Long> ids = List.of(1L, 2L);
+        Inventory.InventoryStatus newStatus = Inventory.InventoryStatus.AVAILABLE;
+        
+        inventoryService.bulkUpdateStatus(newStatus, ids);
+        
+        verify(inventoryRepository).bulkUpdateStatus(newStatus, ids);
     }
 
     @Test
-    public void testUpdateInventory() {
-        when(inventoryRepository.save(any(Inventory.class))).thenReturn(inventory);
+    void listInventoryByStatus_ReturnsPagedData() {
+        // 准备分页数据
+        PageRequest pageable = PageRequest.of(0, 10);
+        Inventory inventory = mock(Inventory.class);
+        when(inventoryRepository.findByStatus(any(), any()))
+                .thenReturn(new PageImpl<>(List.of(inventory)));
 
-        Inventory updatedInventory = inventoryService.updateInventory(1L, inventory);
-        assertNotNull(updatedInventory);
-        assertEquals(1L, updatedInventory.getId());
-        verify(inventoryRepository, times(1)).save(any(Inventory.class));
-    }
+        // 执行测试
+        Page<Inventory> result = inventoryService.listInventoryByStatus(
+                Inventory.InventoryStatus.AVAILABLE, 
+                pageable
+        );
 
-    @Test
-    public void testDeleteInventory() {
-        doNothing().when(inventoryRepository).deleteById(1L);
-
-        inventoryService.deleteInventory(1L);
-        verify(inventoryRepository, times(1)).deleteById(1L);
+        // 验证结果
+        assertThat(result.getContent()).hasSize(1);
+        verify(inventoryRepository).findByStatus(Inventory.InventoryStatus.AVAILABLE, pageable);
     }
 }
